--- a/about-us.html
+++ b/about-us.html
@@ -73,19 +73,21 @@ https://templatemo.com/tm-573-eduwell
   </header>
   <!-- ***** Header Area End ***** -->
 
+  <!-- ***** Title ***** -->
   <section class="page-heading">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
           <div class="header-text">
-            <h4>Conoce más</h4>
-            <h1>SOBRE NOSOTROS</h1>
+            <h4>CONOCE MÁS</h4>
+            <h1>sobre nosotros</h1>
           </div>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- ***** Introduction text ***** -->
   <section class="get-info">
     <div class="container">
       <div class="row">
@@ -96,7 +98,7 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-6 align-self-center">
           <div class="section-heading">
-            <h6>Get info</h6>
+            <h6>información</h6>
             <h4>Read More <em>About Us</em></h4>
             <p>You are allowed 100% to download and use our templates from TemplateMo for your commercial or business
               websites. You are <strong>not allowed</strong> to redistribute this template ZIP file on any other website
@@ -129,13 +131,315 @@ https://templatemo.com/tm-573-eduwell
     </div>
   </section>
 
+  <!-- ***** Top Members ***** -->
   <section class="our-team">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading">
-            <h6>Our Team</h6>
-            <h4>Our Team <em>Members</em></h4>
+            <h6>nuestro equipo</h6>
+            <h4>Conoce a nuestros <em>líderes</em></h4>
+          </div>
+        </div>
+        <div class="col-lg-10 offset-lg-1">
+          <div class="naccs">
+            <div class="tabs">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="menu">
+                    <div class="active">
+                      <img src="assets/images/team-member-thumb-01.jpg" alt="">
+                      <h4>Darinka Moreno</h4>
+                      <span>Supply Director</span>
+                    </div>
+                    <div>
+                      <img src="assets/images/team-leader-02.png" alt="">
+                      <h4>Marco Rojas</h4>
+                      <span>Curriculum & Training Lead</span>
+                    </div>
+                    <div>
+                      <img src="assets/images/team-leader-03.png" alt="">
+                      <h4>Alejandra Luna</h4>
+                      <span>Coordinator <br> .</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <ul class="nacc">
+                    <li class="active">
+                      <div>
+                        <div class="left-content">
+                          <h4>Darinka Moreno</h4>
+                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape
+                            tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights
+                            try-hard green juice probably.</p>
+                          <span><a href="#">Linkedin</a></span>
+                          <span class="last-span"><a href="#">Slack</a></span>
+                          <div class="text-button">
+                            <a href="mailto:darinka.moreno@byjusfutureschool.com">darinka.moreno@byjusfutureschool.com</a>
+                          </div>
+                        </div>
+                        <div class="right-image">
+                          <img src="assets/images/team-member-01.jpg" alt="">
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="left-content">
+                          <h4>Marco Rojas</h4>
+                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape
+                            tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights
+                            try-hard green juice probably.</p>
+                            <span><a href="#">Linkedin</a></span>
+                            <span class="last-span"><a href="#">Slack</a></span>
+                            <div class="text-button">
+                              <a href="mailto:marco.villanueva@byjusfutureschool.com">marco.villanueva@byjusfutureschool.com</a>
+                            </div>
+                        </div>
+                        <div class="right-image">
+                          <img src="assets/images/team-leader-02.png" alt="">
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="left-content">
+                          <h4>Alejandra Luna</h4>
+                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape
+                            tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights
+                            try-hard green juice probably.</p>
+                            <span><a href="#">Linkedin</a></span>
+                            <span class="last-span"><a href="#">Slack</a></span>
+                            <div class="text-button">
+                              <a href="mailto:alejandra.luna@byjusfutureschool.com">alejandra.luna@byjusfutureschool.com</a>
+                            </div>
+                        </div>
+                        <div class="right-image">
+                          <img src="assets/images/team-leader-03.png" alt="">
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ***** Coding Members ***** -->
+  <section class="our-team">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+          <div class="section-heading">
+            <h4>Equipo <em>Coding</em></h4>
+          </div>
+        </div>
+        <div class="col-lg-10 offset-lg-1">
+          <div class="naccs">
+            <div class="tabs">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="menu">
+                    <div class="active">
+                      <img src="assets/images/team-coding-01.png" alt="">
+                      <h4>Sagrario Avín</h4>
+                      <span>Translator & Reviewer</span>
+                    </div>
+                    <div>
+                      <img src="assets/images/team-coding-02.jpg" alt="">
+                      <h4>José Caltzalco</h4>
+                      <span>Translator & Reviewer</span>
+                    </div>
+                    <div>
+                      <img src="assets/images/team-coding-03.jpg" alt="">
+                      <h4>Mario Cortés</h4>
+                      <span>Translator & Reviewer</span>
+                    </div>
+                    <div>
+                      <img src="assets/images/team-coding-04.jpg" alt="">
+                      <h4>Luz Cortés</h4>
+                      <span>Translator & Reviewer</span>
+                    </div>
+                    <div>
+                      <img src="assets/images/team-coding-05.jpg" alt="">
+                      <h4>Miguel Figueroa</h4>
+                      <span>Translator & Reviewer</span>
+                    </div>
+                    <div>
+                      <img src="assets/images/team-coding-06.png" alt="">
+                      <h4>César Garcés</h4>
+                      <span>Translator & Reviewer</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-12">
+                  <ul class="nacc">
+                    <li class="active">
+                      <div>
+                        <div class="left-content">
+                          <h4>Sagrario Avín</h4>
+                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape
+                            tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights
+                            try-hard green juice probably.</p>
+                          <span><a href="#">Linkedin</a></span>
+                          <span class="last-span"><a href="#">Slack</a></span>
+                          <div class="text-button">
+                            <a href="mailto:sagrario.avin@byjusfutureschool.com">sagrario.avin@byjusfutureschool.com</a>
+                          </div>
+                        </div>
+                        <div class="right-image">
+                          <img src="assets/images/team-coding-01.png" alt="">
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="left-content">
+                          <h4>José Caltzalco</h4>
+                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape
+                            tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights
+                            try-hard green juice probably.</p>
+                          <span><a href="#">Linkedin</a></span>
+                          <span class="last-span"><a href="#">Slack</a></span>
+                          <div class="text-button">
+                            <a href="mailto:darinka.moreno@byjusfutureschool.com">darinka.moreno@byjusfutureschool.com</a>
+                          </div>
+                        </div>
+                        <div class="right-image">
+                          <img src="assets/images/team-coding-02.jpg" alt="">
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="left-content">
+                          <h4>Mario Cortés</h4>
+                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape
+                            tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights
+                            try-hard green juice probably.</p>
+                          <span><a href="#">Linkedin</a></span>
+                          <span class="last-span"><a href="#">Slack</a></span>
+                          <div class="text-button">
+                            <a href="mailto:darinka.moreno@byjusfutureschool.com">darinka.moreno@byjusfutureschool.com</a>
+                          </div>
+                        </div>
+                        <div class="right-image">
+                          <img src="assets/images/team-coding-03.jpg" alt="">
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="left-content">
+                          <h4>Luz Cortés</h4>
+                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape
+                            tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights
+                            try-hard green juice probably.</p>
+                          <span><a href="#">Linkedin</a></span>
+                          <span class="last-span"><a href="#">Slack</a></span>
+                          <div class="text-button">
+                            <a href="mailto:darinka.moreno@byjusfutureschool.com">darinka.moreno@byjusfutureschool.com</a>
+                          </div>
+                        </div>
+                        <div class="right-image">
+                          <img src="assets/images/team-coding-04.jpg" alt="">
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="left-content">
+                          <h4>Miguel Figueroa</h4>
+                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape
+                            tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights
+                            try-hard green juice probably.</p>
+                          <span><a href="#">Linkedin</a></span>
+                          <span class="last-span"><a href="#">Slack</a></span>
+                          <div class="text-button">
+                            <a href="mailto:darinka.moreno@byjusfutureschool.com">darinka.moreno@byjusfutureschool.com</a>
+                          </div>
+                        </div>
+                        <div class="right-image">
+                          <img src="assets/images/team-coding-05.jpg" alt="">
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="left-content">
+                          <h4>César Garcés</h4>
+                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape
+                            tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights
+                            try-hard green juice probably.</p>
+                          <span><a href="#">Linkedin</a></span>
+                          <span class="last-span"><a href="#">Slack</a></span>
+                          <div class="text-button">
+                            <a href="mailto:darinka.moreno@byjusfutureschool.com">darinka.moreno@byjusfutureschool.com</a>
+                          </div>
+                        </div>
+                        <div class="right-image">
+                          <img src="assets/images/team-coding-06.jpg" alt="">
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="left-content">
+                          <h4>Karim Ruíz</h4>
+                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape
+                            tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights
+                            try-hard green juice probably.</p>
+                          <span><a href="#">Linkedin</a></span>
+                          <span class="last-span"><a href="#">Slack</a></span>
+                          <div class="text-button">
+                            <a href="mailto:darinka.moreno@byjusfutureschool.com">darinka.moreno@byjusfutureschool.com</a>
+                          </div>
+                        </div>
+                        <div class="right-image">
+                          <img src="assets/images/team-member-01.jpg" alt="">
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <div class="left-content">
+                          <h4>Iram Ruíz</h4>
+                          <p>Quinoa roof party squid prism sustainable letterpress cray hammock tumeric man bun mixtape
+                            tofu subway tile cronut. Deep v ennui subway tile organic seitan kogi freegan bicycle rights
+                            try-hard green juice probably.</p>
+                          <span><a href="#">Linkedin</a></span>
+                          <span class="last-span"><a href="#">Slack</a></span>
+                          <div class="text-button">
+                            <a href="mailto:darinka.moreno@byjusfutureschool.com">darinka.moreno@byjusfutureschool.com</a>
+                          </div>
+                        </div>
+                        <div class="right-image">
+                          <img src="assets/images/team-member-01.jpg" alt="">
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ***** Math Members ***** -->
+  <section class="our-team">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+          <div class="section-heading">
+            <h4>Equipo <em>Math</em></h4>
           </div>
         </div>
         <div class="col-lg-10 offset-lg-1">
@@ -316,11 +620,10 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-12">
           <ul class="social-icons">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa fa-rss"></i></a></li>
-            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+            <li><a href="https://www.facebook.com/byjusfutureschoollatam/"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.linkedin.com/company/byjus-futureschool/mycompany/"><i
+                  class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.instagram.com/byjusfutureschool_latam/"><i class="fa fa-instagram"></i></a></li>
           </ul>
         </div>
         <div class="col-lg-12">
