--- a/faq.html
+++ b/faq.html
@@ -49,14 +49,12 @@ https://templatemo.com/tm-573-eduwell
               <li><a href="index.html#assets">Recursos</a></li>
               <li><a href="index.html#videos">Videos</a></li>
               <li><a href="index.html#contact-section">Oficinas</a></li>
-              <li><a href="index.html#faq">Tab1</a></li>
               <li class="has-sub">
                 <a href="javascript:void(0)">Menú</a>
                 <ul class="sub-menu">
                   <li><a href="about-us.html">Organización</a></li> <!-- ***** Keep this page to show the team ***** -->
-                  <li><a href="contact-us.html">Métricas</a></li> <!-- ***** Keep this page to show metrics ***** -->
+                  <li><a href="metrics.html">Métricas</a></li> <!-- ***** Keep this page to show metrics ***** -->
                   <li><a href="faq.html">PyR</a></li> <!-- ***** Keep this page to show faq ***** -->
-                  <li><a href="our-services.html">Our Services</a></li>
                 </ul>
               </li>
             </ul>
