--- a/index.html
+++ b/index.html
@@ -52,14 +52,12 @@ https://templatemo.com/tm-573-eduwell
               <li class="scroll-to-section"><a href="#assets">Recursos</a></li>
               <li class="scroll-to-section"><a href="#news">Novedades</a></li>
               <li class="scroll-to-section"><a href="#contact-section">Oficinas</a></li>
-              <li class="scroll-to-section"><a href="#faq">Tab1</a></li>
               <li class="has-sub">
                 <a href="javascript:void(0)">Menú</a>
                 <ul class="sub-menu">
                   <li><a href="about-us.html">Organización</a></li> <!-- ***** Keep this page to show the team ***** -->
-                  <li><a href="contact-us.html">Métricas</a></li> <!-- ***** Keep this page to show metrics ***** -->
+                  <li><a href="metrics.html">Métricas</a></li> <!-- ***** Keep this page to show metrics ***** -->
                   <li><a href="faq.html">PyR</a></li> <!-- ***** Keep this page to show faq ***** -->
-                  <li><a href="our-services.html">Our Services</a></li>
                 </ul>
               </li>
             </ul>
