--- a/metrics.html
+++ b/metrics.html
@@ -71,19 +71,21 @@ https://templatemo.com/tm-573-eduwell
   </header>
   <!-- ***** Header Area End ***** -->
 
+  <!-- ***** Title ***** -->
   <section class="page-heading">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
           <div class="header-text">
-            <h4>Say Hello EduWell</h4>
-            <h1>Contact Us</h1>
+            <h4>MÉTRICAS</h4>
+            <h1>Nuestros números</h1>
           </div>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- ***** More info text ***** -->
   <section class="more-info">
     <div class="container">
       <div class="row">
@@ -106,28 +108,85 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-6 offset-lg-1 align-self-center">
           <div class="row">
-            <div class="col-6">
+            <div class="col-lg">
               <div class="count-area-content">
                 <div class="count-digit">125</div>
-                <div class="count-title">Finished Projects</div>
+                <div class="count-title">Total de palabras traducidas este mes</div>
               </div>
             </div>
-            <div class="col-6">
+          </div>
+          <div class="row">
+            <div class="col-lg">
               <div class="count-area-content">
-                <div class="count-digit">11</div>
-                <div class="count-title">Years Experience</div>
+                <div class="count-digit">125</div>
+                <div class="count-title">Total de palabras traducidas este año</div>
               </div>
             </div>
-            <div class="col-6">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ***** More info text ***** -->
+  <section class="more-info">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="section-heading">
+            <h6>Clases totales</h6>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="section-heading">
+            <h4>Coding</h4>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="section-heading">
+            <h4>Math</h4>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 align-self-center">
+          <div class="row">
+            <div class="col-3">
               <div class="count-area-content">
-                <div class="count-digit">87</div>
-                <div class="count-title">Happy Clients</div>
+                <div class="count-digit">256</div>
+                <div class="count-title">Clases 1:1</div>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-lg-3">
               <div class="count-area-content">
-                <div class="count-digit">24</div>
-                <div class="count-title">Awwards Won</div>
+                <div class="count-digit">256</div>
+                <div class="count-title">Clases 1:4</div>
+              </div>
+            </div>
+            <div class="col-lg-4 offset-lg-1">
+              <div class="count-area-content">
+                <div class="count-digit">256</div>
+                <div class="count-title">Math 1:1</div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="count-area-content">
+                <div class="count-digit">256</div>
+                <div class="count-title">MCEE 1:1</div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="count-area-content">
+                <div class="count-digit">256</div>
+                <div class="count-title">MCEE 1:M</div>
+              </div>
+            </div>
+            <div class="col-lg-4 offset-lg-1">
+              <div class="count-area-content">
+                <div class="count-digit">256</div>
+                <div class="count-title">Math 1:4</div>
               </div>
             </div>
           </div>
@@ -140,7 +199,7 @@ https://templatemo.com/tm-573-eduwell
     <div class="container">
       <div class="row">
         <div class="col-lg-8">
-          
+
         </div>
         <div class="col-lg-4">
           <form id="contact" action="" method="post">
@@ -188,8 +247,8 @@ https://templatemo.com/tm-573-eduwell
         </div>
         <div class="col-lg-12">
           <p class="copyright">Designed by TemplateMo | Adapted by BFS MX <br> Copyright © 2022
-          
-          <!-- <br>Design: <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a></p> -->
+
+            <!-- <br>Design: <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a></p> -->
         </div>
       </div>
     </div>
