--- a/faq.html
+++ b/faq.html
@@ -45,10 +45,6 @@ https://templatemo.com/tm-573-eduwell
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li><a href="index.html" class="active">Inicio</a></li>
-              <li><a href="index.html#assets">Recursos</a></li>
-              <li><a href="index.html#videos">Videos</a></li>
-              <li><a href="index.html#contact-section">Oficinas</a></li>
               <li class="has-sub">
                 <a href="javascript:void(0)">Menú</a>
                 <ul class="sub-menu">
@@ -74,23 +70,10 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-12">
           <div class="header-text">
-            <h4>What We Do</h4>
-            <h1>Our Services</h1>
+            <h4>¿Alguna duda?</h4>
+            <h1>Preguntas frecuentes</h1>
           </div>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="services">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="section-heading">
-            <h6>Our Services</h6>
-            <h4>Provided <em>Services</em></h4>
-          </div>
-        </div                 
       </div>
     </div>
   </section>
